# claudemini

./: .gitignore  Cargo.toml  Claudemini.md  README.md  SESSION_RESUME.md  claudemini.toml
.github/workflows/: ci.yml
flight_recorder/: claudemini.log.2026-05-28
src/: lib.rs  logging.rs  main.rs
src/agent/: mod.rs  tests.rs
src/cli/: mod.rs
src/mcp/: mod.rs
src/mcp_server/: mod.rs
src/orchestrator/: mod.rs  tests.rs  tests_logic.rs
src/tui/: events.rs  mod.rs
