[package]
name = "claudemini"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-mcp-sdk = { version = "0.9", features = ["server", "macros"] }
async-trait = "0.1"
anyhow = "1.0"
futures = "0.3"
colored = "3.1.1"
termimad = "0.34.1"
regex = "1.12.3"
ratatui = "0.29.0"
crossterm = "0.28.1"
tui-textarea = "0.7.0"
tui-markdown = "0.3.7"
toml = "1.1.2"
