[package]
name = "claudemini"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rust-mcp-sdk = { version = "0.9", features = ["server", "macros"] }
async-trait = "0.1"
anyhow = "1.0"
futures = "0.3"
colored = "3.1.1"
termimad = "0.34.1"
regex = "1.12.3"
ratatui = "0.29.0"
crossterm = "0.28.1"
tui-textarea = "0.7.0"
tui-markdown = "0.3.7"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["json", "env-filter"] }
tracing-appender = "0.2.5"
clap = { version = "4.6.1", features = ["derive"] }
sysinfo = "0.39.2"
backtrace = "0.3.76"
uuid = { version = "1.23.1", features = ["v4"] }
which = "8.0.2"
